@@ -4916,4 +4916,6 @@ a)"xI
 
 /(?(?(?(?(?(?))))))/
 
+/(?<=(?1))((?s))/anchored
+
 # End of testinput2 
